# open-webui

./: tailwind.config.js
.github/workflows/: deploy.yml  sync-fork.yml
backend/: pyproject.toml
backend/open_webui/: main.py
src/: app.html  tailwind.css
src/lib/components/chat/Messages/: ResponseMessage.svelte
src/lib/utils/: index.ts
