[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nelson K.", email = "kamganelson@gmail.com" }
]
dependencies = [
    "APScheduler==3.10.4",
    "Flask==3.0.3",
    "Flask-Cors==4.0.0",
    "Markdown==3.6",
    "PyJWT[crypto]==2.8.0",
    "PyMySQL==1.1.0",
    "aiohttp==3.9.5",
    "argon2-cffi==23.1.0",
    "bcrypt==4.1.2",
    "black==24.4.2",
    "boto3==1.34.95",
    "chromadb==0.4.24",
    "docx2txt==0.8",
    "fake-useragent==1.5.1",
    "fastapi==0.109.2",
    "faster-whisper==1.0.1",
    "fpdf2==2.7.8",
    "google-generativeai==0.5.2",
    "langchain==0.1.16",
    "langchain-chroma==0.1.0",
    "langchain-community==0.0.34",
    "langfuse==2.27.3",
    "litellm[proxy]==1.35.28",
    "opencv-python-headless==4.9.0.80",
    "openpyxl==3.1.2",
    "pandas==2.2.2",
    "passlib[bcrypt]==1.7.4",
    "peewee==3.17.3",
    "peewee-migrate==1.12.2",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "pypandoc==1.13",
    "pypdf==4.2.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.9",
    "python-pptx==0.6.23",
    "python-socketio==5.11.2",
    "pytube",
    "pyxlsb==1.0.10",
    "rank-bm25==0.2.2",
    "rapidocr-onnxruntime==1.2.3",
    "requests==2.31.0",
    "sentence-transformers==2.7.0",
    "unstructured==0.11.8",
    "uvicorn[standard]==0.22.0",
    "validators==0.28.1",
    "xlrd==2.0.1",
    "youtube-transcript-api==0.6.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
